# D3D12MemoryAllocator

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  NOTICES.txt  README.md
.github/workflows/: windows.yaml
docs/html/: _d3_d12_mem_alloc_8h.html  _d3_d12_mem_alloc_8h_source.html  annotated.html  class_d3_d12_m_a_1_1_allocation-members.html  class_d3_d12_m_a_1_1_allocation.html  class_d3_d12_m_a_1_1_allocator-members.html  class_d3_d12_m_a_1_1_allocator.html  class_d3_d12_m_a_1_1_defragmentation_context-members.html  class_d3_d12_m_a_1_1_defragmentation_context.html  class_d3_d12_m_a_1_1_pool-members.html  class_d3_d12_m_a_1_1_pool.html  class_d3_d12_m_a_1_1_virtual_block-members.html  class_d3_d12_m_a_1_1_virtual_block.html  classes.html  configuration.html  custom_pools.html  defragmentation.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  faq.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  general_considerations.html  globals.html  globals_defs.html  hierarchy.html  index.html  linear_algorithm.html  menudata.js  namespace_d3_d12_m_a.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_func.html  namespacemembers_type.html  namespacemembers_vars.html  (+51 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  (+44 more)
github/workflows/: windows.yaml
include/: D3D12MemAlloc.h
premake/: premake5.lua
src/: CMakeLists.txt  Common.cpp  Common.h  D3D12MemAlloc.cpp  D3D12MemAlloc.h  D3D12MemAlloc.natvis  D3D12Sample.cpp  Doxyfile  Tests.cpp  Tests.h
src/Shaders/: FxBatchCompilerScript.fxbc  PS.hlsl  PS_Compiled.h  VS.hlsl  VS_Compiled.h
src/cmake/: config.cmake.in
tools/D3d12maDumpVis/: D3d12maDumpVis by Blazer.py  D3d12maDumpVis.py
tools/GpuMemDumpVis/: GpuMemDumpVis.py  README.md
